--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,13 +33,18 @@ section {
 .no_video {
     width: 100%;
     height: 15vw;
-    background-color: #FFF;
+    background-color: #BBB;
+    border: 0.3vw solid #000;
 }
 
 /* Text */
 
 p {
     margin: 2vw 0;
+}
+
+h1 {
+    color: #000;
 }
 
 /* prefixes til sections */
