--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,10 @@ section {
     padding: 2vw;
 }
 
+img {
+    width: 100%;
+}
+
 /* Flexbox */
 
 .container {
@@ -32,7 +36,7 @@ section {
 
 .no_video {
     width: 100%;
-    height: 15vw;
+    height: 14.4vw;
     background-color: #BBB;
     border: 0.3vw solid #000;
 }
@@ -59,6 +63,11 @@ h1 {
 
 /* Splash */
 
+#splash {
+    background-color: #8f9bc8;
+    color: #fff;
+}
+
 /* Scrum */
 
 /* Persona */
@@ -69,4 +78,10 @@ h1 {
 
 #persona div {
     width: 80vw;
+}
+
+/* Data */
+
+#data iframe {
+    width: 50%;
 }
