--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,13 @@ img {
     width: 100%;
 }
 
+.no_video {
+    width: 100%;
+    height: 14.4vw;
+    background-color: #BBB;
+    border: 0.3vw solid #000;
+}
+
 /* Flexbox */
 
 .container {
@@ -32,13 +39,6 @@ img {
 
 .column {
     width: 100%;
-}
-
-.no_video {
-    width: 100%;
-    height: 14.4vw;
-    background-color: #BBB;
-    border: 0.3vw solid #000;
 }
 
 /* Text */
@@ -80,8 +80,20 @@ h1 {
     width: 80vw;
 }
 
+/* App ide */
+
+#app_ide h3 {
+    margin: 4vw 0 2.5vw 0;
+}
+
 /* Data */
 
 #data iframe {
-    width: 50%;
+    width: 50vw;
+    height: 28.125vw;
+}
+
+.center {
+    margin: 3vw auto;
+    width: 50vw;
 }
