--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    color: #eee;
 }
 
 video {
@@ -13,7 +12,7 @@ video {
 
 iframe {
     width: 100%;
-    height: 15vw;
+    height: 13.5vw;
 }
 
 section {
@@ -26,7 +25,7 @@ img {
 
 .no_video {
     width: 100%;
-    height: 14.4vw;
+    height: 12.9vw;
     background-color: #BBB;
     border: 0.3vw solid #000;
 }
@@ -47,26 +46,19 @@ p {
     margin: 2vw 0;
 }
 
-h1 {
+/* prefixes til sections */
+
+.bg_pri {
+    background-color: #d47778;
+    color: #FFF;
+}
+
+.bg_sec {
+    background-color: #FFF;
     color: #000;
 }
 
-/* prefixes til sections */
-
-.bg_red {
-    background-color: #d47778;
-}
-
-.bg_blue {
-    background-color: #2c3562;
-}
-
 /* Splash */
-
-#splash {
-    background-color: #8f9bc8;
-    color: #fff;
-}
 
 /* Scrum */
 
