--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-color: #555;
 }
 
 video {
@@ -16,7 +17,9 @@ iframe {
 }
 
 section {
-    padding: 2vw;
+    padding: 4vw;
+    margin: 4vw;
+    border-radius: 4vw;
 }
 
 img {
@@ -44,6 +47,19 @@ img {
 
 p {
     margin: 2vw 0;
+}
+
+h1 {
+    font-size: 5vw;
+}
+
+a {
+    color: #00f;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 /* prefixes til sections */
@@ -88,4 +104,13 @@ p {
 .center {
     margin: 3vw auto;
     width: 50vw;
+}
+
+/* App ikon */
+
+#ikon div {
+    background-color: #bbb;
+    padding: 0 0 5vw 6vw;
+    margin: 4vw;
+    border-radius: 3vw;
 }
