--- a/pitch/stylesheet.css
+++ b/pitch/stylesheet.css
@@ -1,16 +1,31 @@
-img {
+* {
+
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.phone {
     width: 30vw;
     position: absolute;
     top: 8vw;
     right: 5vw;
 }
 
-div {
-    width: 18.15vw;
-    height: 32.3vw;
+.circle {
     position: absolute;
-    top: 13.7vw;
-    right: 11.25vw;
+    top: 6vw;
+    left: 30vw;
+    z-index: -1;
+    width: 100vw;
+
+}
+
+div {
+    width: 18.16vw;
+    height: 32.6vw;
+    position: absolute;
+    top: 13.6vw;
+    right: 11.22vw;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -18,4 +33,44 @@ div {
 
 iframe {
     height: 100%;
+}
+
+p {
+    width: 60vw;
+    margin: 4vw 0;
+    font-size: 2.5vw;
+}
+
+h1 {
+    font-family: 'Barlow', sans-serif;
+    font-weight: 900;
+    font-size: 4em;
+}
+
+.underoverskrift {
+    font-style: italic;
+    font-size: 2.5em;
+    font-weight: 900;
+    color: #599ea1;
+    margin-bottom: 0.5vw;
+}
+
+li {
+    font-size: 1.2em;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 500;
+}
+
+.underoverskrift2 {
+    color: grey;
+    font-style: italic;
+    font-size: 2.1em;
+    font-weight: 900;
+    margin-top: 0.5vw;
+}
+
+
+
+body {
+    margin-left: 8vw;
 }
