--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,7 +125,7 @@ a:hover {
     margin: 0;
     border-radius: 0;
     background-color: #FFF;
-    height: 100vh;
+    height: 100%;
 }
 
 .center_2 {
