--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,7 @@ img {
 
 .column {
     width: 100%;
+    flex-grow: 1;
 }
 
 /* Text */
@@ -128,6 +129,26 @@ a:hover {
     height: 100%;
 }
 
+.app_vid {
+    height: 44vw;
+}
+
+.app_vid video {
+    width: 12.2vw;
+    position: absolute;
+    left: 18.7vw;
+    top: 29.7vw;
+    z-index: 3;
+}
+
+.app_vid img {
+    width: 20vw;
+    top: 26vw;
+    left: 15vw;
+    z-index: 2;
+    position: absolute;
+}
+
 .center_2 {
     width: 60vw;
     margin: 3vw auto;
@@ -138,20 +159,23 @@ a:hover {
 }
 
 .buttons {
-    display: flex;
-    width: 60vw;
-    margin: 0 auto;
-    justify-content: space-between;
+    width: 50vw;
+    padding: 0 0 0 9vw;
 }
 
 .buttons div {
     text-align: center;
-    width: 25vw;
+    width: 20vw;
     background-color: #599ea1;
     color: #000;
     height: 3vw;
-    font-size: 2.5vw;
-    padding: 1vw;
+    font-size: 2vw;
+    padding: 1.5vw;
+    margin: 4vw 2vw;
+}
+
+.buttons p {
+    margin: 5vw 2vw;
 }
 
 .buttons a {
