--- a/pitch/stylesheet.css
+++ b/pitch/stylesheet.css
@@ -1,7 +1,6 @@
 * {
 
     font-family: 'Roboto', sans-serif;
-
 }
 
 body {
@@ -58,15 +57,19 @@ p {
 
 h1 {
     font-family: 'Barlow', sans-serif;
-    font-weight: 900;
-    font-size: 4em;
+    font-weight: 300;
+    font-size: 5.7em;
+    margin-bottom: 20px;
+}
+
+h1 b {
+    font-weight: 700;
+    color: #606060;
 }
 
 .underoverskrift {
-    font-style: italic;
-    font-size: 2.5em;
-    font-weight: 900;
-    color: #599ea1;
+    font-size: 2.4em;
+    font-weight: 300;
     margin-bottom: 0.5vw;
     margin-top: 2.5vw;
 }
@@ -74,16 +77,20 @@ h1 {
 li {
     font-size: 1.6em;
     font-family: 'Barlow', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     margin: 1vw 0;
 }
 
 .underoverskrift2 {
-    color: grey;
-    font-style: italic;
-    font-size: 2.1em;
-    font-weight: 900;
+    font-size: 2em;
+    font-weight: 300;
     margin-top: 0.5vw;
+}
+
+h2 {
+    color: #222;
+    font-weight: 300;
+    font-size: 1.6em;
 }
 
 
